css/main.css
/**
 Fonts
*/

@font-face {
	font-family: Comfortaa;
	src: url("/fonts/Comfortaa-Regular-Mod.ttf");
}

@font-face {
	font-family: Noto Mono;
	src: url("/fonts/NotoMono-Regular.ttf");
}

/**
 Variables
*/

html {

	/* These two should end up with the same color */
	--primary-color: #ebebeb;
	--play-button-filter: brightness(0.92);

	--hover-transition: ease 0.25s;
	--shadow: drop-shadow(0px 0px 5px #000e);
	--loading-background: #111;
	--loading-color: #222;
	--loading-font: Noto Mono;
	--loading-font-size: 3.5em;
	--play-button-size: 100px;
	--volume-slider-width: 100px;
	--slider-height: 12px;
	--slider-thumb-size: 20px;
	--title-font: Comfortaa;
	--title-font-size: 2.2em;
	--title-side-margin: 25px;
	--board-width: 400px;
	--board-margin-horizontal: 20px;
	--link-margin-vertical: 5px;
	--link-edit-margin-horizontal: 5px;
	--link-font: Comfortaa;
	--link-size: 23px;
}

/**
 Content rules
*/

/* Common */

* {
	outline: none;
	-webkit-tap-highlight-color: transparent;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
}

hr {
	border: 2px solid var(--primary-color);
	background-color: var(--primary-color);
	border-radius: 10px;
	width: 100%;
}

a {
	text-decoration: none;
}

.shadow {
	filter: var(--shadow);
}

/* Loading text */

.bg-loading {
	background-color: var(--loading-background);
}

.bg-loading_text {
	position: fixed;
	top: 50px;
	left: 55px;
	font-family: var(--loading-font);
	font-size: var(--loading-font-size);
	color: var(--loading-color);
	white-space: nowrap;
}

@media all and (max-width: 850px) {
	.bg-loading_text {
		display: none;
	}
}

.bg-video, .bg-loading_text {
	z-index: -1;
}

/* Header and footer */

.content {
	display: flex;
	flex-flow: column;
	justify-content: space-between;
	width: 100%;
	height: 100%;
}

.footer {
	display: flex;
	justify-content: space-between;
}

.header {
	display: flex;
	justify-content: flex-end;
	flex: 1;
	overflow: hidden;
}

.player-controls {
	display: flex;
}

.play-button {
	width: var(--play-button-size);
	filter: var(--play-button-filter);
	cursor: pointer;
}

.board {
	display: flex;
	flex-flow: column;
	margin: 0px var(--board-margin-horizontal);
	height: 100%;
	max-width: var(--board-width);
	width: 100%;
}

/* Sliders and volume slider */

input[type="range"],
input[type="range"]::-webkit-slider-thumb {
	appearance: none;
	-moz-appearance: none;
	-webkit-appearance: none;
	background: var(--primary-color);
	cursor: pointer;
}

input[type="range"] {
	height: var(--slider-height);
	border-radius: 10px;
}

input[type="range"]::-webkit-slider-thumb {
	width: var(--slider-thumb-size);
	height: var(--slider-thumb-size);
	border-radius: 50%;
}

.volume-slider-wrapper {
	height: 100%;
	display: flex;
	align-items: center;
}

.volume-slider {
	width: var(--volume-slider-width);
	opacity: 0;
	transition: var(--hover-transition);
}

.volume-slider-wrapper:hover > .volume-slider {
	opacity: 1;
	transition: var(--hover-transition);
}

/* Title */

.title {
	padding: var(--title-side-margin) calc(var(--title-side-margin) * 1.5);
	margin: 0px;
	font-size: var(--title-font-size);
	font-family: var(--title-font);
	color: var(--primary-color);
	width: 100%;
	white-space: nowrap;
	overflow: hidden;
	cursor: pointer;
}

/* Links */

.links-list-wrapper {
	flex: 1;
	overflow-y: auto;
	margin-top: var(--title-side-margin);
}

.links-list {
	display: flex;
	flex-flow: column;
}

.link-wrapper {
	display: flex;
	justify-content: flex-end;
	margin: var(--link-margin-vertical) 0px;
	text-align: right;
}

.link {
	font-family: var(--link-font);
	font-size: var(--link-size);
	color: var(--primary-color);
}

.link-input {
	background: transparent;
	border: none;
	text-align: right;
	padding: 0px;
	width: 100%;
}

.link-edit {
	display: flex;
	align-items: center;
	margin: 0px var(--link-edit-margin-horizontal);
	cursor: pointer;
	opacity: 0;
	transition: var(--hover-transition);
}

.link-edit img {
	width: 20px;
	filter: var(--play-button-filter);
}

.link-wrapper:hover > .link-edit {
	opacity: 1;
	transition: var(--hover-transition);
}

